Some Bug fixes forfeitures Squash of the following commits  Remove processed forfeitures  some bug fixes  Added t_check_number to transaction table  Added same fields as previous report

--- a/public/css/clean_old.css
+++ b/public/css/clean_old.css
@@ -163,3 +163,6 @@ div#navbar {
 .container-850 {
 	width: 850px;
 }
+.container-nine {
+	width: 950px;
+}
